@@ -1,59 +1,61 @@
 package Apache::GTopLimit;
 
-use ExtUtils::MakeMaker;
-
-BEGIN { require 5.002 }
-
+require 5.005;
 use strict;
 
+use ExtUtils::MakeMaker;
+
 # prerequisites
-my %require =
-  (
-   "GTop" => "0.09",
+my %require = (
+   "GTop"     => "0.09",
    "mod_perl" => "1.15",
-  );
+);
 
-#--- Installation check
-
-#--- Check for mod_perl, Apache::ScoreBoard, GTop
+# Check prerequisites
 for (keys %require) {
-  chk_version($_ => $require{$_}) or
-    warn  "\n"
-        . "*** For ".__PACKAGE__." to work you require version $require{$_}, or later, of\n"
-        . "$_.pm from CPAN\n\n";
+    chk_version($_ => $require{$_}) or
+        warn  "\n" .
+            "*** For ".__PACKAGE__." to work you require version $require{$_}" .
+            ", or later, of\n$_.pm from CPAN\n\n";
 }
 
+sub chk_version {
+    my($pkg,$wanted) = @_;
+    no strict 'refs';
+    local $| = 1;
 
-sub chk_version{
-  my ($pkg,$wanted) = @_;
-  no strict 'refs';
-  local $| = 1;
+    print "Checking for $pkg...";
 
-  print "Checking for $pkg...";
+    eval { (my $p = $pkg . ".pm") =~ s|::|/|g; require $p;};
 
-  eval { (my $p = $pkg . ".pm") =~ s#::#/#g; require $p;};
+    print("not ok\n$@"),return if $@;
 
-  print("not ok\n$@"),return if $@;
+    my $vstr = ${"${pkg}::VERSION"} 
+       ? "found v" . ${"${pkg}::VERSION"} 
+       : "not found";
+    my $vnum = ${"${pkg}::VERSION"} || 0;
 
-  my $vstr = ${"${pkg}::VERSION"} ? "found v" . ${"${pkg}::VERSION"}
-                                 : "not found";
-  my $vnum = ${"${pkg}::VERSION"} || 0;
+    print $vnum >= $wanted ? "ok\n" : " " . $vstr . "\n";
 
-  print $vnum >= $wanted ? "ok\n" : " " . $vstr . "\n";
-
-  $vnum >= $wanted;
+    $vnum >= $wanted;
 
 }
-
 
 WriteMakefile(
-	      NAME => __PACKAGE__,
-	      VERSION_FROM => 'GTopLimit.pm',
-	      dist => {
-		       PREOP => 'pod2text GTopLimit.pm > README',
-		       COMPRESS => 'gzip -9f',
-		       SUFFIX   => '.gz', 
-		       DIST_DEFAULT => 'tardist',
-		      },
-	      PREREQ_PM => \%require,
-	     );
+    NAME         => __PACKAGE__,
+    VERSION_FROM => 'GTopLimit.pm',
+    (
+     $] < 5.005 ? () :
+     (
+      AUTHOR            => 'Stas Bekman <stas@stason.org>',
+      ABSTRACT_FROM     => 'GTopLimit.pm',
+     )
+    ),
+    dist => {
+             PREOP        => 'pod2text GTopLimit.pm > $(DISTVNAME)/README',
+             COMPRESS     => 'gzip -9f',
+             SUFFIX       => '.gz',
+             DIST_DEFAULT => 'tardist',
+            },
+    PREREQ_PM => \%require,
+);
