@@ -1,5 +1,17 @@
 =head1 CHANGES (Apache::GTopLimit)
 
+=head1 ver 1.0 Wed Feb 20 11:54:23 SGT 2002
+
+* making the DEBUG a constant variable, settable via PerlSetVar
+
+* A few code style changes and doc fixes
+
+* this module has spent enough time in alpha/beta incubator => going 1.0.
+
+=head1 ver 0.2 Mon Oct 16 23:04:01 2000
+
+* fixed the warnings generated on every request
+
 =head1 ver 0.1 Tue Aug 17 07:32:20 IDT 1999
 
 * Removed the use of global variables (save a few memory bits)
